manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-web-api-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-web-api
  template:
    metadata:
      labels:
        app: hello-world-web-api
    spec:
      containers:
        - name: hello-world-web-api
          image: marespriv/devops-with-k8s:hello-world-web-api
          ports:
            - containerPort: 3030
              protocol: TCP
