manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-web-api-svc
spec:
  type: ClusterIP
  selector:
    app: hello-world-web-api
  ports:
    - port: 3030
      protocol: TCP
      targetPort: 3030
